--- a/views/EditBus.ejs
+++ b/views/EditBus.ejs
@@ -5,11 +5,27 @@
 </head>
 <body>
     <form action="/editbus" method="POST">
-        <input value="<%= buses[busIDNo].busLocation.nextStop %>" name="nextStop" id="nextStop" type="text" required>
-        <input value="<%= buses[busIDNo].busLocation.lat %>" name="Lat" id="Lat" type="text" required>
-        <input value="<%= buses[busIDNo].busLocation.lng %>" name="Lng" id="Lng" type="text" required>
-        <input value="<%= buses[busIDNo].id %>" name="busID" id="busID" type="text" required>
-        <input value="<%= buses[busIDNo].busNo %>" name="busNo" id="busNo" type="number" required>
-        <button>Submit</button>
+
+        
+        <div class="form-group">
+            <label for="nextStop" class="control-label">Next Stop</label>
+            <input class="form-control" value="<%= buses[busIDNo].busLocation.nextStop %>" name="nextStop" id="nextStop" type="text" required>
+        </div>
+        <div class="form-group">
+            <label for="Lat" class="control-label">Latitude</label>
+            <input class="form-control" value="<%= buses[busIDNo].busLocation.lat %>" name="Lat" id="Lat" type="text" required>
+        </div>
+        <div class="form-group">
+            <label for="Lng" class="control-label">Longitude</label>
+            <input class="form-control" value="<%= buses[busIDNo].busLocation.lng %>" name="Lng" id="Lng" type="text" required>
+        </div>
+        
+        <div class="form-group">
+            <label for="busNo" class="control-label">Bus Number</label>
+            <input class="form-control" value="<%= buses[busIDNo].busNo %>" name="busNo" id="busNo" type="number" required>
+        </div>
+        <input value="<%= buses[busIDNo].id %>" name="busID" id="busID" type="text" required hidden>
+        
+        <button class="btn btn-primary">Submit</button>
     </form>
 </body>
