added labels to inputs

--- a/views/BusTracker.ejs
+++ b/views/BusTracker.ejs
@@ -148,7 +148,7 @@
         async>
         </script>
 
-    <button onclick="socketRequest()"> Refresh Map</button>
+    <button class="btn btn-success" onclick="socketRequest()"> Refresh Map</button>
     <label for="Locations">Choose a location:</label>
 
     <select name="locations" id="locations">
@@ -158,6 +158,9 @@
         <% } %>
 
     </select>
+    <h2>How to track a bus</h2>
+    <p>1. select a location</p>
+    <p>2. click refresh or wait 60 seconds</p>
 
 </body>
 <script>
