--- a/views/BusSim.ejs
+++ b/views/BusSim.ejs
@@ -10,20 +10,36 @@
 
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
     <form action="/busSim" method="POST">
-        <input value="<%= buses[0].id %>" name="busID" >
-        Current stop: <input value="" name="CurrentStop" id="CurrentStop">
-        Next Stop: <input value="<%= buses[0].busLocation.nextStop %>" name="nextStop" id="nextStop">
-        <input value="<%= buses[0].busLocation.lat %>" name="Lat" id="Lat">
-        <input value="<%= buses[0].busLocation.lng %>" name="Lng" id="Lng">
-        <button>Submit</button>
+
+        <div class="form-group" hidden>
+            <label for="busID" class="control-label">ID</label>
+            <input value="<%= buses[0].id %>" name="busID" >
+        </div>
+        <div class="form-group">
+            <label for="CurrentStop" class="control-label">Current stop</label>
+            <input value="" name="CurrentStop" id="CurrentStop">
+        </div>
+        <div class="form-group">
+            <label for="nextStop" class="control-label">Next stop</label>
+            <input value="<%= buses[0].busLocation.nextStop %>" name="nextStop" id="nextStop">
+        </div>
+        <div class="form-group">
+            <label for="Lat" class="control-label">latitude</label>
+            <input value="<%= buses[0].busLocation.lat %>" name="Lat" id="Lat">
+        </div>
+        <div class="form-group">
+            <label for="Lat" class="control-label">longitude</label>
+            <input value="<%= buses[0].busLocation.lng %>" name="Lng" id="Lng">
+        </div>
+        <button class="btn btn-primary">Submit</button>
 
     </form>
 
-    <button onclick="changeBusLocation('Pilgrims Mews')">Pilgrims Mews</button>
-    <button onclick="changeBusLocation('Railway Station')">Railway Station</button>
-    <button onclick="changeBusLocation('Western Approach Flats')">Western Approach Flats</button>
-    <button onclick="changeBusLocation('Western Approach (Stop 2)')">Western Approach (Stop 2)</button>
-    <button onclick="changeBusLocation('Royal Parade (Stop A11)')">Royal Parade (Stop A11)</button>
+    <button class="btn btn-secondary" onclick="changeBusLocation('Pilgrims Mews')">Pilgrims Mews</button>
+    <button class="btn btn-secondary" onclick="changeBusLocation('Railway Station')">Railway Station</button>
+    <button class="btn btn-secondary" onclick="changeBusLocation('Western Approach Flats')">Western Approach Flats</button>
+    <button class="btn btn-secondary" onclick="changeBusLocation('Western Approach (Stop 2)')">Western Approach (Stop 2)</button>
+    <button class="btn btn-secondary" onclick="changeBusLocation('Royal Parade (Stop A11)')">Royal Parade (Stop A11)</button>
 
 </body>
 <script>
