fixed some accessbility issues

--- a/views/BusManagement.ejs
+++ b/views/BusManagement.ejs
@@ -30,7 +30,7 @@
         <th>NextStop</th>
         <th>Current Lat</th>
         <th>Current Lng</th>
-        <th> </th>
+        <th>delete/manage routes/edit </th>
 
         <% for(var i=0; i < buses.length; i++) { %>
         <tr>
