--- a/views/BusSim.ejs
+++ b/views/BusSim.ejs
@@ -28,7 +28,7 @@
             <input value="<%= buses[0].busLocation.lat %>" name="Lat" id="Lat">
         </div>
         <div class="form-group">
-            <label for="Lat" class="control-label">longitude</label>
+            <label for="Lng" class="control-label">longitude</label>
             <input value="<%= buses[0].busLocation.lng %>" name="Lng" id="Lng">
         </div>
         <button class="btn btn-primary">Submit</button>
