--- a/views/EditRoute.ejs
+++ b/views/EditRoute.ejs
@@ -9,15 +9,15 @@
         <input hidden value="<%=[busIDNo]%>" name="busIDNo" id="busIDNo">
         <input hidden value="<%=routeIDNo %>" name="routeID" id="routeID">
         <div class="form-group">
-            <label for="locName" class="control-label">Location</label>
+            <label for="locName" class="control-label">Location Name</label>
             <input class="form-control" value="<%= buses[busIDNo].route[routeIDNo].locName %>" name="locName" id="locName" type="text" required>
         </div>
         <div class="form-group">
-            <label for="lat" class="control-label">Location</label>
+            <label for="lat" class="control-label">Latitude</label>
             <input class="form-control" value="<%= buses[busIDNo].route[routeIDNo].lat %>" name="lat" id="lat" type="text" required>
         </div>
         <div class="form-group">
-            <label for="lng" class="control-label">Location</label>
+            <label for="lng" class="control-label">Longitude</label>
             <input class="form-control" value="<%= buses[busIDNo].route[routeIDNo].lng %>" name="lng" id="lng" type="text" required>
         </div>
         <button class="btn btn-primary" id="submitRoute">Submit</button>
